fixed seagull rendering out of frame on IOS

--- a/src/visual_components/Seagull.css
+++ b/src/visual_components/Seagull.css
@@ -45,8 +45,12 @@
 
 @media only screen and (max-width: 900px) {
     .sea-container {
-        width: auto !important;
-        height: 40vh !important;
+        width: 250px !important;
+        height: 250px !important;
+    }
+
+    .sea-container > svg {
+        border-radius: 50%;
     }
 
     .sea-breath {
@@ -71,7 +75,7 @@
         right: 0;
         margin: 0 auto;
         opacity: 1;
- 
+
         animation: '';
         display: none;
     
